versioned_docs/version-1.40/reference/okteto-cli.mdx
---
title: Okteto CLI
description: The Okteto Command Line Interface is a unified tool to manage your development environments
sidebar_label: Okteto CLI
id: okteto-cli
---

import TiersList from "@theme/TiersList";

The Okteto Command Line Interface (CLI) is a unified tool to manage your applications in Okteto directly from your terminal.
Follow this [guide to download and install the CLI](get-started/install-okteto-cli.mdx) if you don't already have it. The CLI is an [open-source](https://github.com/okteto/okteto) tool that can be used independently or integrated with the Okteto Platform.
- Commands labeled `Platform` are available exclusively on the Okteto platform and require the [Okteto Helm Chart to be installed](get-started/install/index.mdx) in your Kubernetes cluster
- Commands labeled `Open-Source` are available to users of the Okteto open-source CLI

For a complete comparison of features, refer to the [open-source README](https://github.com/okteto/okteto/?tab=readme-ov-file#okteto-open-source-cli-features)

## Synopsis

```console
$ okteto [options] <command> <subcommand> [parameters]
```

Use `okteto command --help` for information on a specific command. The synopsis for each command shows its parameters and their usage. Optional parameters are shown in square brackets.

## Global Flags

| Options                                        |   Type                     | Description                  | Default                    |
| :--------------------------------------------- |  :-----------------------: | :------------------------:   | :------------------------: |
| <em className="no-wrap">_--help_</em>          | bool                       | Show help info               |                            |
| <em className="no-wrap">_-l, --log-level_</em> | _debug, info, warn, error_ | Amount of information output | warm                       |
| <em className="no-wrap">_--log-output_</em>    | _tty, plain, json_         | Output format for logs       | tty                        |


## Available commands

### analytics<TiersList tiers="Platform Open-Source" />

Enable / Disable analytics collection. Analytics are enabled by default.

If [telemetry](self-hosted/helm-configuration.mdx#telemetry) is disabled, analytics are disabled for all developers.

```console
$ okteto analytics [parameters]
```

| Options                                      | Description                  |
| :------------------------------------------- | :--------------------------- |
| <em className="no-wrap">_-d, --disable_</em> | Disable analytic collection |

Okteto only collects information to help us understand how our users interact with the product. We don't collect any personally identifiable information.

When you use the okteto CLI, the following information is collected:

- The name of the action
- A timestamp of when it was run
- Your version of the CLI
- Your OS
- An anonymous machine ID (we use https://github.com/denisbrodbeck/machineid for this)
- A user ID if you are currently logged in to Okteto
- An action ID (to correlate multiple actions performed during a command's execution)

Please reach [out to us](mailto://hello@okteto.com) if you have any questions or concerns about the information collected.

### build<TiersList tiers="Platform" />

Build and push the images defined in the `build` section using the [Okteto Build Service](core/build-service.mdx).

```console
$ okteto build [image...]
```

:::tip
To save you time, `okteto build` will only build the image if your build context hasn't been built before. You can always force a build by using the `--no-cache` flag. Learn more about [Okteto Smart Builds here](core/build-service.mdx#smart-builds).
:::

The following command flags are available:

| Options                                        |   Type   | Description                                                                | Default     |
| :--------------------------------------------- | :------: | :------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string   | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_--no-cache_</em>      |  bool    | Do not use cache when building the image                                   | `false` |
| <em className="no-wrap">_--progress_</em>      |  string  | Show plain/tty build output                                                | `tty` |

You can also use the `-f` to point to a Dockerfile instead of an Okteto Manifest.
In this mode, `okteto build` will build an image using the Dockerfile.
This is useful to build images that are not defined on your [Okteto manifest](/reference/okteto-manifest.mdx).

In "Dockerfile" mode, the following additional flags can be used (very similar to `docker build`):

| Options                                       |   Type   | Description                                                                | Default     |
| :-------------------------------------------- | :------: | :------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_--build-arg_</em>    |  list  | Set build-time variables (optional)                                     | |
| <em className="no-wrap">_--cache-from_</em>   |  list  | List of cache source images (optional)                                     | |
| <em className="no-wrap">_--export-cache_</em> | string | Image tag for exported cache when build (optional)                         | |
| <em className="no-wrap">_--platform_</em>     | string | Specify which platform to build the container image for (optional)         | |
| <em className="no-wrap">_--secret_</em>       |  list  | Secret files exposed to the build. Format: `id=mysecret,src=/local/secret` | |
| <em className="no-wrap">_-t, --tag_</em>      | string | Tag name to be pushed (optional) | |
| <em className="no-wrap">_--target_</em>       | string | Target build stage to build (optional) | |

:::tip
If you use multiple Dockerfiles, you can use different ignore-files for each Dockerfile. You do so using a special naming convention for the ignore-files. Place your ignore-file in the same directory as the Dockerfile, and prefix the ignore-file with the name of the Dockerfile, as shown in the following example. e.g. `dev.Dockerfile.dev` and `dev.Dockerfile.dockerignore`
:::

### context<TiersList tiers="Platform Open-Source" />

Set the default Okteto Context.

An Okteto Context is a group of cluster access parameters. Each context contains a Kubernetes cluster, a user, and a namespace.
The current Okteto Context is the default cluster/namespace for any Okteto CLI command.

```console
$ okteto context
```

:::tip
`okteto ctx` is an alias of `okteto context`.
:::

This will prompt you to select one of your existing Okteto Contexts or to create a new one:

```console
A context defines the default cluster/namespace for any Okteto CLI command.
Select the context you want to use:
Use the arrow keys to navigate: ↓ ↑ → ←
  ▸ https://okteto.example.com *
    minikube

    Create new context
```

| Options                                                 |   Type   | Description                                                                                                     | Default |
| :------------------------------------------------------ | :------: | :-------------------------------------------------------------------------------------------------------------- | :------ |
| <em className="no-wrap">--insecure-skip-tls-verify</em> | bool     | Skip validation of server's certificates                                                                        | `false`
| <em className="no-wrap">_-n, --namespace_</em>          | string   | Overwrite the current Okteto Namespace                                                                         | |
| <em className="no-wrap">_--token_</em>                  | string   | API token for authentication. Use this when scripting or if you don't want to use browser-based authentication. | |

When you run `okteto context`, the Okteto CLI will exchange an authorization token with the Okteto Platform and save your API token and Okteto certificates information under `$HOME/.okteto/`.


:::tip

In your CI/CD you should use environment variables to specify your Okteto Context, Namespace and token. Check out [Environment Variables](core/credentials/environment-variables.mdx) to know more.

:::

Available subcommands:

#### delete

Delete one or more Okteto Contexts.

For example, to delete the Okteto Context "https://okteto.example.com", run:

```console
$ okteto context delete https://okteto.example.com
```

#### list

List available Okteto Contexts.

```console
$ okteto context list
```

```console
Name                               Namespace    Builder                                   Registry
https://okteto.example.com *       cindy        tcp://buildkit.okteto.example.com:1234    registry.okteto.example.com
minikube                           default      docker                                    -
```

| Options                                        | Type   | Description                           | Default     |
| ---------------------------------------------- | :----: | ------------------------------------- | :---------- |
| <em className="no-wrap">_-o, --output_</em>    | string | Output format. One of: `json`, `yaml` | `json` |

#### show

Print the current Okteto Context.

```console
$ okteto context show
```

| Options                                        | Type   | Description                           | Default     |
| ---------------------------------------------- | :----: | ------------------------------------- | :---------- |
| <em className="no-wrap">_--include-token_</em> |  bool  | Include the token in the output       | `false` |
| <em className="no-wrap">_-o, --output_</em>    | string | Output format. One of: `json`, `yaml` | `json` |

```console
{
  "name": "https://okteto.example.com",
  "token": "REDACTED", # only printed using flag: --include-token
  "namespace": "cindy",
  "builder": "tcp://buildkit.okteto.example.com:1234",
  "registry": "registry.okteto.example.com",
  "isOkteto": true
}
```

#### use

Set the default Okteto Context. `okteto context use` is an alias of `okteto context`.

### deploy<TiersList tiers="Platform" />

Deploy your Development Environment by running the commands specified in the `deploy` section of your Okteto Manifest.

```console
$ okteto deploy
```

If there are pending changes in the images defined in your Okteto Manifest, `okteto deploy` automatically builds and pushes all them.
This way, `okteto deploy` enforce all your local changes are pushed to your Development Environment.

If the repositories in the `dependencies` section haven't been deployed yet, `okteto deploy` deploys these dependencies automatically.

The command is executed relative to the path where the Okteto Manifest is located. This means, that if the Okteto Manifest is at any subfolder, the command will use the context of the subfolder where the Okteto Manifest is defined.

##### Options

| Options                                        |   Type   | Description                                                                 | Default     |
| :--------------------------------------------- | :------: | :-------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">--dependencies</em>    |   bool   | Force deployment of repositories in the `dependencies` section              | Set by cluster config |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--name_</em>          |  string  | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_-n, --namespace_</em> | string   | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_--no-bash_</em>       |   bool   | Execute the command using the container's default shell instead of bash     | `false` |
| <em className="no-wrap">_--no-build_</em>      |   bool   | Skips the re-build of images in the `build` section                         | `false` |
| <em className="no-wrap">_--remote_</em>        |   bool   | Run the deploy commands using [Remote Execution](core/remote-execution.mdx) | `false` |
| <em className="no-wrap">_-t, --timeout_</em>   | duration | The duration to wait until all pods are healthy. Requires `--wait`. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h  | 5m0s |
| <em className="no-wrap">_-v, --var_</em>       |   list   | Set a variable for the deploy commands (can be set more than once)          | |
| <em className="no-wrap">_-w, --wait_</em>      |   bool   | Wait until the deployment finishes and pods are healthy                     | `false` |


### destroy<TiersList tiers="Platform" />

Destroy your Development Environment.
It automatically destroys all the Kubernetes resources created by [okteto deploy](reference/okteto-cli.mdx#deploy).
If you need to destroy external resources (like s3 buckets or other Cloud resources), use the [destroy](reference/okteto-manifest.mdx#destroy-string-optional) section of the Okteto Manifest.

```console
$ okteto destroy
```

The `okteto destroy` command will only destroy resources matching the specified Development Environment name. By default, this is the name of the folder, but you can specify the [name in the Okteto Manifest](reference/okteto-manifest.mdx#name-string-optional), or with the `--name` flag.
In a monorepo scenario, where you might have several Okteto Manifests, you need to specify the correct Okteto Manifest to destroy the specific Development Environment.
This ensures that the appropriate destroy commands, as defined in your Okteto Manifest, are executed within a particular scope.

This way, executing the `okteto destroy` command on one Development Environment will not delete the other.
For example, if you have two Development Environments, `dev1` and `dev2`, and you run `okteto destroy` for `dev1`, it will only destroy the resources for `dev1` and leave `dev2` intact.

You can use `okteto destroy --all` to delete all Development Environments in an Okteto Namespace.

##### Options

| Options                                            |  Type  | Description                                                                                                                                                                                                                                                         | Default     |
| :------------------------------------------------- | :----: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :---------- |
| <em className="no-wrap">_--all_</em>               |  bool  | Destroy all Development Environments, excluding resources annotated with `dev.okteto.com/policy: keep`                                                                                                                                                                                | `false` |
| <em className="no-wrap">_-d, --dependencies_</em>  |  bool  | Force destroy repositories in the `dependencies` section                                                                                                                                                                                                            | Set by cluster config |
| <em className="no-wrap">_-f, --file_</em>          | string | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--force-destroy_</em>     |  bool  | Forces the Development Environment to be destroyed even if there is an error executing the custom destroy commands defined in the Okteto Manifest                                                                                                                          | `false` |
| <em className="no-wrap">_--name_</em>              | string | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_-n, --namespace_</em>     | string | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_--no-bash_</em>           |  bool  | Execute the command using the container's default shell instead of bash                                                                                                                                                                                             | `false` |
| <em className="no-wrap">_--remote_</em>            |  bool  | Run the destroy commands using [Remote Execution](core/remote-execution.mdx) | `false` |
| <em className="no-wrap">_-v, --volumes_</em>       |  bool  | Destroy the persistent volumes created by the Development Environment                                                                                                                                                                                               | `false` |

> Resources annotated with `dev.okteto.com/policy: keep` will not be affected by the destroy action.

### doctor<TiersList tiers="Platform Open-Source" />

Generate a doctor file with all the information relevant for troubleshooting an issue. Use it when filing an issue or asking the Okteto community for help.

```console
$ okteto doctor [devContainer]
```

The `doctor` command should be run from the folder where you ran `okteto up`.

The doctor file contains:

- The `okteto.log`
- The syncthing logs of your Development Container
- A summary of your Development Container manifest
- A metadata file with information about your host machine's OS and architecture

The following command flags are available:

| Options                                        |   Type   | Description                                                                | Default     |
| :--------------------------------------------- | :------: | :------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string   | Overwrite the current Okteto Namespace                                    | |

### down<TiersList tiers="Platform Open-Source" />

Deactivate your Development Container, stops the file synchronization service, and restores your previous deployment configuration.

```console
$ okteto down [devContainer]
```

The `down` command should be run from the same location as `okteto up`.

| Options                                        |  Type  | Description                                                             | Default     |
| :--------------------------------------------- | :----: | :---------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-A, --all_</em>       | bool   | Deactivate all running Development Containers                                   | `false` |
| <em className="no-wrap">_-f, --file_</em>      | string | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string | Overwrite the current Okteto Namespace                                 | |
| <em className="no-wrap">_-v, --volumes_</em>   | bool   | Remove persistent volumes where your local folder is synced on remote  | `false` |

:::tip
Stopping Your Development Container Automatically
You can automatically disable your Development Container by setting the `OKTETO_AUTO_DOWN_ENABLED` feature flag to `true`, [this is set as an environment variable](reference/feature-flags.mdx). When enabled, `okteto down` will automatically run when you exit the terminal session, provided all commands completed successfully. This helps keep your development environment clean without manual intervention.

Learn more about this and other [feature flags](reference/feature-flags.mdx).
:::

### endpoints<TiersList tiers="Platform" />

List the public endpoints of your Development Environment.

```console
$ okteto endpoints
```

| Options                                        |   Type   | Description                           |
| :--------------------------------------------- | :------: | :------------------------------------ |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--name_</em>          |  string  | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_-n, --namespace_</em> | string   | Overwrite the current Okteto Namespace                            | |
| <em className="no-wrap">_-o, --output_</em>    | string   | Output format. One of: ['json', 'md']                                   | `json` |

### exec<TiersList tiers="Platform Open-Source" />

The `exec` command allows you to execute a `COMMAND` inside your Development Container, created by an `okteto up` session which is already running. It is important to note that `okteto exec` can only be used with a container that is in development mode. If there is no active Development Container corresponding to the current folder, the command will fail.

If only one Development Container is running, `okteto exec` will automatically connect to it. If multiple Development Containers are activated, you'll be presented with a selector to choose which one you want to connect to.

```console
$ okteto exec [devContainer] -- COMMAND
```

Make sure to run the `exec` command from the same directory where you ran `okteto up`.

| Options                                        |  Type  | Description                          | Default     |
| :--------------------------------------------- | :----: | :----------------------------------- | :---------- |
| <em className="no-wrap">_-f, --file_</em>      | string | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string | Overwrite the current Okteto Namespace                                    | |

### help<TiersList tiers="Platform Open-Source" />

Displays the full help.

```console
$ okteto help
```

### kubeconfig<TiersList tiers="Platform Open-Source" />

Download credentials for the Kubernetes cluster selected via `okteto context`.

```console
$ okteto kubeconfig
```

```console
 i  Updated kubernetes context 'okteto_example_com/cindy' in '/Users/cindy/.kube/config'
```

### logs<TiersList tiers="Platform" />

Fetch the logs of your Development Environment.

```console
$ okteto logs [serviceName]
```

The first argument is optional and it's a regex matching the name of the containers you want to fetch the logs from.
For example, `okteto logs api` fetches the logs of any container starting with `api`.

| Options                                         |  Type    | Description                                                                       | Default    |
| :---------------------------------------------- | :------: | :-------------------------------------------------------------------------------- |:---------- |
| <em className="no-wrap">_-a, --all_</em>        |   bool   | Fetch logs from the whole namespace                                               | `false` |
| <em className="no-wrap">_-e, --exclude_</em>    |  string  | Exclude by container name (regular expression)                                      | |
| <em className="no-wrap">_-f, --file_</em>       | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--name_</em>           |  string  | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_-n, --namespace_</em>  | string   | Overwrite the current Okteto Namespace                                           | |
| <em className="no-wrap">_-s, --since_</em>      | duration | Return logs newer than a relative duration like 5s, 2m, or 3h                     | 48h0m0s |
| <em className="no-wrap">_--tail_</em>           |   int    | The number of lines from the end of the logs to show                              | 100 |
| <em className="no-wrap">_-t, --timestamps_</em> |  bool    | Print timestamps                                                                  | `false` |

### namespace<TiersList tiers="Platform" />

Configure the default namespace of the Okteto Context.

```console
$ okteto namespace
```

:::tip
`okteto ns` is an alias of `okteto namespace`.
:::

This will prompt you to select one of your existing namespaces:

```console
Select the namespace you want to use:
Use the arrow keys to navigate: ↓ ↑ → ←
  ▸ cindy

    Create new namespace
```

```console
 ✓  Using context cindy @ okteto.example.com
```

| Options                                      |  Type    | Description                                                                       | Default    |
| :------------------------------------------- | :------: | :-------------------------------------------------------------------------------- |:---------- |
| <em className="no-wrap">_--personal_</em>    |  bool    | Load personal namespace                                                           | `false`|

#### create

Create an Okteto Namespace. By default the command will switch to the new namespace, add `--use=false` to create the namespace, and it will keep the current namespace active.

```console
$ okteto namespace create test-cindy
```

```console
 ✓  Namespace 'test-cindy' created
 ✓  Using context test-cindy @ okteto.example.com
```

#### delete

Delete an Okteto Namespace. If the Okteto Manifest deployed in the Okteto Namespace include `destroy` commands, they will be executed as part of this command. By default, it deletes the default namespace in the Okteto Context.

```console
$ okteto namespace delete test-cindy
```

```console
 ✓  Namespace 'test-cindy' deleted
```

#### list

List your Okteto Namespaces.

```console
$ okteto namespace list
```

```console
Namespace       Status
demos-cindy     Active
cindy *         Active
```

| Options                                        | Type   | Description                           | Default     |
| ---------------------------------------------- | :----: | ------------------------------------- | :---------- |
| <em className="no-wrap">_-o, --output_</em>    | string | Output format. One of: `json`, `yaml` | `json` |

#### use

Configure the default namespace of the Okteto Context. `okteto namespace use` is an alias of `okteto namespace`.

#### sleep

Sleeps an Okteto Namespace. By default, it sleeps the default namespace in the Okteto Context.

```console
$ okteto namespace sleep [name]
```

```console
i  Using test-cindy @ okteto.example.com as context
✓  Namespace 'test-cindy' is sleeping
```

If you'd like to sleep an Okteto Namespace other than the default one, you can provide its name as an argument to the command.

#### wake

Wakes an Okteto Namespace. By default, it wakes the default namespace in the Okteto Context.

```console
$ okteto namespace wake [name]
```

```console
i  Using test-cindy @ okteto.example.com as context
✓  Namespace 'test-cindy' is awake now
```

If you'd like to wake an Okteto Namespace other than the default one, you can provide its name as an argument to the command.

### pipeline<TiersList tiers="Platform" />

[Development Environments](development/index.mdx) management commands.

```console
$  okteto pipeline [command]
```

Available subcommands:

#### deploy

Runs a job in the cluster that clones a repository and executes [okteto deploy](reference/okteto-cli.mdx#deploy) on it.
This is equivalent to clicking the **Deploy Dev Environment** button on the Okteto UI and selecting a git repository.

```console
$ okteto pipeline deploy
```

##### Options

| Options                                           |   Type   | Description                                                                                                                    | Default     |
| :------------------------------------------------ | :------: | :----------------------------------------------------------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-b, --branch_</em>       |  string  | The branch to deploy                                                                                                           | Your current branch |
| <em className="no-wrap">--dependencies</em>       |   bool   | Force deployment of repositories in the `dependencies` section                                                                 | Set by cluster config |
| <em className="no-wrap">_-f, --file_</em>         | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--label_</em>            |   list   | Tag and organize Development Environments using labels (multiple _--label_ flags accepted)                                     | |
| <em className="no-wrap">_--name_</em>             |  string  | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_-n, --namespace_</em>    | string   | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_-r, --repository_</em>   |  string  | The HTTPS url of the repository to deploy (e.g. https://github.com/okteto/movies)                                              | Your current repository |
| <em className="no-wrap">_--reuse-params_</em>     |   bool   | If the Development Environment exists, reuse same parameters to redeploy                                                                           | |
| <em className="no-wrap">_--skip-if-exists_</em>   |   bool   | Skip the deployment if the Development Environment already exists in the Okteto Namespace                                                   | `false` |
| <em className="no-wrap">_-t, --timeout_</em>      | duration | The duration to wait for the deployment to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h          | 5m0s |
| <em className="no-wrap">_-v, --var_</em>          |   list   | Set a variable to be injected in the deploy commands (can be set more than once)                                                                            | |
| <em className="no-wrap">_-w, --wait_</em>         |   bool   | Wait until the deployment finishes                                                                                               | `true` |

#### destroy

Runs a job in the cluster that clones a repository and executes [okteto destroy](reference/okteto-cli.mdx#destroy) on it.
This is equivalent to clicking the **Destroy** button on the Okteto UI.

```console
$ okteto pipeline destroy
```

##### Options

| Options                                           |  Type  | Description                                                                                                                | Default     |
| :------------------------------------------------ | :----: | :------------------------------------------------------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_--dependencies_</em>     |  bool  | Force destroy repositories in the `dependencies` section                                                                   | Set by cluster config |
| <em className="no-wrap">_--name_</em>             | string | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_-n, --namespace_</em>    | string | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_-t, --timeout_</em>      | string | The duration to wait for the Development Environment to be destroyed. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h  | 5m0s |
| <em className="no-wrap">_-v, --volumes_</em>      |  bool  | Destroy the persistent volumes created by the Development Environment                                                                     | `false` |
| <em className="no-wrap">_-w, --wait_</em>         |  bool  | Wait until the Development Environment is destroyed                                                                                       | `true` |

#### list

List all your Development Environments in the current Okteto Namespace.

```console
$ okteto pipeline list
```

Run `okteto pipeline list` to get the status and info of your Development Environments.

| Options                                        |  Type  | Description                                                                                             | Default     |
| :--------------------------------------------- | :----: | :------------------------------------------------------------------------------------------------------ | :---------- |
| <em className="no-wrap">_--label_</em>         |  list  | Tag and organize Development Environments using labels (multiple _--label_ flags accepted)              | |
| <em className="no-wrap">_-n, --namespace_</em> | string | Overwrite the current Okteto Namespace                                                                 | |
| <em className="no-wrap">_-o, --output_</em>    | string | Output format. One of: ['json', 'yaml']                                                                 | `json` |

### preview<TiersList tiers="Platform" />

[Preview environment](previews/index.mdx) management commands.

```console
$ okteto preview [command]
```

#### deploy

Deploy a Preview Environment.

```console
$ okteto preview deploy [name]
```

Run `okteto preview deploy` to automatically deploy a Preview Environment for your branch.

| Options                                       |   Type   | Description                                                                                                                                                                                                                              | Default     |
| :-------------------------------------------- | :------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-b, --branch_</em>   |  string  | The branch to deploy                                                                                                                                                                                                                     | Your current branch |
| <em className="no-wrap">_--dependencies_</em> |   bool   | Force deployment of repositories in the `dependencies` section              | Set by cluster config |
| <em className="no-wrap">_-f, --file_</em>     | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--label_</em>        |   list   | Tag and organize Preview Environments using labels (multiple _--label_ flags accepted)                                                                                                                                                   | |
| <em className="no-wrap">--repository</em>     |  string  | The url of the repository to deploy (e.g. https://github.com/okteto/movies)                                                                                                                                                              | Your current repo |
| <em className="no-wrap">_-s, --scope_</em>    |  string  | The scope of Preview Environment to create: `personal` or `global`. A personal Preview Environment can only be accessed by its creator, while in a global Preview Environment all cluster users can access it.       | `global` |
| <em className="no-wrap">_--sourceUrl_</em>    |  string  | The HTTPS url of the pull/merge request to deploy.                                                                                                                                                                                       | |
| <em className="no-wrap">_-t, --timeout_</em>  | duration | The duration to wait for the deployment to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h                                                                                                          | 5m0s |
| <em className="no-wrap">_-v, --var_</em>      |   list   | Set a variable to be injected in the deploy commands (can be set more than once)                                                                                                                                                                           | |
| <em className="no-wrap">_-w, --wait_</em>     |   bool   | Wait until the deployment finishes                                                                                                                                                                                               | `true` |

#### destroy

Destroy a Preview Environment.

```console
$ okteto preview destroy [name]
```

Run `okteto preview destroy` to destroy a Preview Environment by name.

If the Okteto Manifest includes `destroy` commands, they will be executed as part of this command.

| Options                                   | Type | Description                                                 | Default     |
| :---------------------------------------- | :--: | :---------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-w, --wait_</em> | bool | Wait until the Preview Environment destruction finishes                 | `true`      |

#### endpoints

List the endpoints of a Preview Environment.

```console
$ okteto preview endpoints [name]
```

| Options                                     |  Type  | Description                     | Default                     |
| :------------------------------------------ | :----: | :------------------------------ | :------------------------------ |
| <em className="no-wrap">_-o, --output_</em> | string | Output format. One of: [`json`, `md`] | `json`

Output flag can be used to parse the endpoints and add them to your PR with a custom layout.

#### list

List all your Preview Environments.

```console
$ okteto preview list
```

Run `okteto preview list` to get the status and scope of your Preview Environments.

| Options                                        |  Type  | Description                                                                            | Default                     |
| :--------------------------------------------- | :----: | :------------------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_--label_</em>         |  list  | Tag and organize Preview Environments using labels (multiple _--label_ flags accepted) | |
| <em className="no-wrap">_-n, --namespace_</em> | string | Overwrite the current Okteto Namespace                                                | |
| <em className="no-wrap">_-o, --output_</em>    | string | Output format. One of: [`json`, `yaml`]                                                | `json` |

#### sleep

Sleep an Preview Environment. Only users with admin access or who own the Preview Environment can take this action.

```console
$ okteto preview sleep [name]
```

More on sleeping resources [here](admin/cleanup.mdx#manually-sleeping-resources).

#### wake

Wake a Preview Environment. You must provide the name of a Preview Environment as an argument for this command.

```console
$ okteto namespace wake [name]
```

### restart<TiersList tiers="Platform Open-Source" />

Restarts the containers corresponding to the `services` section for a given Development Container.
This is useful to reload configurations that cannot be hot-reloaded.

```console
$ okteto restart [devContainer]
```

The `restart` command should be run from the same location than `okteto up`.

| Options                                        |  Type  | Description                                                     | Default     |
| :--------------------------------------------- | :----: | :-------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-f, --file_</em>      | string | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string | Overwrite the current Okteto Namespace                                    | |

### status<TiersList tiers="Platform Open-Source" />

Status of the file synchronization process for a given Development Container.

```console
$ okteto status [devContainer] --info
```

```console
 i  Local syncthing url: http://localhost:60539
 i  Remote syncthing url: http://localhost:60538
 i  Syncthing username: okteto
 i  Syncthing password: ac0ee34a-b1aa-4a41-bc67-cec3128b6cfd
 ✓  Synchronization status: 100.00%
```

The `status` command should be run from the same location than `okteto up`.

| Options                                        |  Type  | Description                                                          | Default     |
| :--------------------------------------------- | :----: | :------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_--info_</em>          |  bool  | Show syncthing links for troubleshooting the synchronization service | |
| <em className="no-wrap">_-n, --namespace_</em> | string   | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_-w, --watch_</em>     |  bool  | Watch for changes                                                    | |

### test<TiersList tiers="Platform" />

Run tests using [Remote Execution](core/remote-execution.mdx#how-remote-execution-works).

```console
$ okteto test [testContainerName]
```

Since tests run inside the cluster, all internal endpoints are available inside the test execution.
For example, if you deployed an api service on port 8080 it will be accessible at: `http://api.${OKTETO_NAMESPACE}:8080`. [Dynamic endpoints](core/okteto-variables.mdx#configuring-dynamic-endpoints) are also available within the test commands.


| Options                                        |   Type   | Description                                                                                                            | Default     |
| :--------------------------------------------- | :------: | :--------------------------------------------------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_--deploy_</em>        |  bool    | Force execution of the commands in the `deploy` section                                       | `false` |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string   | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_--name_</em>          |  string  | The name of the Development Environment                                     | The repo/folder name |
| <em className="no-wrap">_--no-cache_</em>      |  bool    | By default, the `caches` of a Test Container are reused between executions                                                      | `false` |
| <em className="no-wrap">_-t, --timeout_</em>   | duration | The duration to wait for the Test Container to run. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h | 5m0s |
| <em className="no-wrap">_-v, --var_</em>       |  list    | Set a variable to be injected in the test commands (can be set more than once)                                            | |

### up<TiersList tiers="Platform Open-Source" />

Activate a Development Container.

If needed, `okteto up` builds the images and runs the deploy commands defined in your [Okteto Manifest](reference/okteto-manifest.mdx).

```console
$ okteto up [devContainer]
```

When you run `okteto up`, okteto scales to zero the specified deployment and creates a mirror deployment. The mirror deployment is a copy of the original deployment manifest with the following development-time improvements:

- Okteto overrides the container-level configuration of the original deployment with the values defined in your [Okteto Manifest](reference/okteto-manifest.mdx). A typical example of this is to replace the production container image with one that contains your development runtime.
- A bidirectional file [synchronization service](reference/file-synchronization.mdx) is started to keep your changes up to date between your local filesystem and your development container.
- Automatic local and remote port forwarding using [SSH](reference/ssh-server.mdx). This allows you to do things like access your cluster services via `localhost` or connect a remote debugger.
- A watcher service to keep the definition of the mirror deployment up to date with original deployment.

It's worth noting that your Development Container inherits the original deployment manifest definition.
Therefore, the Development Container uses the same service account, environment variables, secrets, volumes, sidecars, ... than the original deployment, providing a fully integrated development environment.

> Run [`okteto down`](#down) to restore your original deployment.

:::tip Stopping Your Development Container Automatically
You can automatically disable your Development Container by setting the `OKTETO_AUTO_DOWN_ENABLED` feature flag to `true`, [this is set as an environment variable](reference/feature-flags.mdx). When enabled, `okteto down` will automatically run when you exit the terminal session, provided all commands completed successfully. This helps keep your development environment clean without manual intervention.

Learn more about this and other [feature flags](reference/feature-flags.mdx).
:::

| Options                                        |  Type  | Description                                                                                                            | Default     |
| :--------------------------------------------- | :----: | :--------------------------------------------------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-d, --deploy_</em>    |  bool  | Force the redeployment of your Development Environment                                         | `false` |
| <em className="no-wrap">_-e, --env_</em>       |  list  | Set environment variable in the Development Container                                                                          | |
| <em className="no-wrap">_-f, --file_</em>      | string | The path to the Okteto Manifest                                            | `okteto.yml`|
| <em className="no-wrap">_-n, --namespace_</em> | string | Overwrite the current Okteto Namespace                                    | |
| <em className="no-wrap">_-r, --remote_</em>    |  int   | Exposes the SSH server in a given port                      | |
| <em className="no-wrap">_--reset_</em>         |  bool  | Resets the file synchronization service. Use it if the file synchronization service stops working                     | `false`|

You can also overwrite the start [command](reference/okteto-manifest.mdx#command-string-optional) in your Development Container with the syntax `okteto up -- COMMAND [args...]`.

### validate<TiersList tiers="Platform Open-Source" />

This command helps you catch configuration errors, typos or invalid syntax in your Okteto Manifest. When authoring a new manifest or updating an existing one, you can use this command to quickly validate the changes you've made.

By default, it will use the Okteto Manifest in the current directory, alternatively you can specify a different path using the `--file` flag.

```console
$ okteto validate
```

The following command flags are available:

| Options                                        |   Type   | Description                                                                | Default     |
| :--------------------------------------------- | :------: | :------------------------------------------------------------------------- | :---------- |
| <em className="no-wrap">_-f, --file_</em>      | string   | The path to the Okteto Manifest                                            | `okteto.yml`|

### version<TiersList tiers="Platform Open-Source" />

Show the current installed Okteto CLI binary version

```console
$ okteto version
```

Available subcommands:

#### update

Show information about how to update the Okteto CLI binary.

```console
$ okteto version update
```

```console
You can update okteto with the following:

# Using installation script:
curl https://get.okteto.com -sSfL | sh

# Using brew:
brew upgrade okteto
```



## Dynamic Environment Variables
Okteto automatically creates dynamic environment variables for build dependencies so you can easily reference outputs from dependency builds in your own builds or pipelines.

The format is:
```
OKTETO_DEPENDENCY_${DEPENDENCY_NAME}_BUILD_${BUILD_SVC}_${BUILD_ENVVAR}
```
Where:

- `${DEPENDENCY_NAME}` is the name of the dependency (as defined in your manifest’s dependencies section)
- `${BUILD_SVC}` is the service being built within that dependency
- `${BUILD_ENVVAR}` is the name of the environment variable you wish to reference from the build

**Example** - Suppose you have the following in your manifest:

```yaml
deploy:
  - name: Deploy Application
    command: |
      helm upgrade --install hello-world ./hello-world \
        --set helloworld.image.repository=${OKTETO_DEPENDENCY_HELLO_WORLD_NOCHART_BUILD_HELLO_WORLD_IMAGE} \
        --set holamundo.image.repository=${OKTETO_DEPENDENCY_HOLA_MUNDO_NOCHART_BUILD_HOLA_MUNDO_IMAGE} \
        --values values-okteto.yaml
```
- `OKTETO_DEPENDENCY_HELLO_WORLD_NOCHART_BUILD_HELLO_WORLD_IMAGE` will be resolved by Okteto to the image repository produced by the `hello-world` service build of the `hello-world-nocharts` dependency.
- `OKTETO_DEPENDENCY_HOLA_MUNDO_NOCHART_BUILD_HOLA_MUNDO_IMAGE` will be resolved by Okteto to the image repository produced by the `hola-mundo` service build of the `hola-mundo-nocharts` dependency.

This mechanism enables advanced automation and chaining of build artifacts or secrets between dependencies and services.

:::tip
Use these variables in your build args, deploy steps, or pipeline commands wherever you need to consume data produced by dependency builds.
:::

## Troubleshooting

### Kubernetes authentication

After you've ran `okteto kubeconfig` you should be able to communicate with the cluster through tools like `kubectl` and `helm`. If you are getting errors when trying to do so, you can use the `okteto kubetoken` command to troubleshoot the issue. This command is used internally as your [authentication plugin](https://kubernetes.io/docs/reference/access-authn-authz/authentication/#client-go-credential-plugins) against the cluster.

When running

```console
$ okteto kubetoken <okteto_url> <namespace> # example: okteto kubetoken https://okteto.example.com cindy
```

You should see a message like this:

```json
{
  "apiVersion": "client.authentication.k8s.io/v1",
  "metadata": {
    "creationTimestamp": null,
    "managedFields": [
      {
        "manager": "backend",
        "operation": "Update",
        "apiVersion": "authentication.k8s.io/v1",
        "time": "2023-03-01T13:18:48Z",
        "fieldsType": "FieldsV1",
        "fieldsV1": {
          "f:spec": {
            "f:expirationSeconds": {}
          }
        },
        "subresource": "token"
      }
    ]
  },
  "spec": {
    "audiences": ["<your-cluster-audience>"],
    "expirationSeconds": 1800,
    "boundObjectRef": null
  },
  "status": {
    "token": "<your.jwt.token>",
    "expirationTimestamp": "2023-03-01T13:48:48Z"
  }
}
```

If you are getting something else, you should be receiving an error message with guidance on how to follow up.
